# 2dPlayGround

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  pre-commit-config.yaml
apps/_template/: CMakeLists.txt  main.cpp
apps/asteroids/: Asteroids.cpp  Asteroids.h  Background.cpp  Background.h  CMakeLists.txt  Entities.h  Game.cpp  Game.h  Player.cpp  Player.h  RegistryHelper.h  main.cpp
apps/asteroids/components/: Entities.h  SoundEntities.h
apps/asteroids/core/: FrameStamp.h  Game.cpp  Game.h  RegistryHelper.h
apps/asteroids/entities/: Entities.h
apps/asteroids/events/: Collision.h  Collison.h  LaserFired.h
apps/asteroids/scripting/: ScriptBinding.cpp
apps/asteroids/systems/: Asteroids.cpp  Asteroids.h  Background.cpp  Background.h  Collisions.cpp  Collisions.hpp  DynamicsSystem.cpp  DynamicsSystem.hpp  Lasers.cpp  Lasers.h  Player.cpp  Player.h  RenderSystem.cpp  RenderSystem.hpp  ScriptSystem.hpp  SoundSystem.cpp  SoundSystem.hpp  SystemInterface.h
apps/galaxy/: CMakeLists.txt  Config.hpp  Galaxy.cpp  Galaxy.hpp  GameScene.hpp  main.cpp
apps/galaxy/behaviors/: BehaviorActionNode.hpp  BuildDrone.hpp  EntityQueueLoop.hpp  FindNextSystem.hpp  FindNextTarget.hpp  GetTargetsAvailable.hpp  MakeDrone.hpp  PortDefinitions.hpp  Produce.hpp  ProductionQueueLoop.hpp  SetFactionBlackboard.hpp  TestLoop.hpp  Travel.hpp  TreeSetupHelper.hpp
apps/galaxy/components/: Behavior.hpp  Drone.hpp  Faction.hpp  FactionState.hpp  GalaxyTime.hpp  GameState.hpp  Lifetime.hpp  Orbit.hpp  PickedEntity.hpp  SoundScape.hpp  StarSystem.hpp  Stats.hpp  Tags.hpp
apps/galaxy/configs/: SceneConfig.hpp
apps/galaxy/doc/: ideas.md
apps/galaxy/entities/: Drone.hpp  Faction.hpp  RenderState.hpp  StarSystem.hpp  Tags.hpp
apps/galaxy/events/: DroneEvents.hpp  PickEvent.hpp  SystemEvents.hpp  UIEvents.hpp
apps/galaxy/gui/: DashBoardWidget.hpp  DemoToolBox.hpp  GameGuiWidget.hpp  InSceneOptionsWidget.hpp  LoadResourcesWidget.hpp  LoadingBarWidget.hpp  MainBarWidget.hpp  MainFrameWidget.hpp  MainMenuWidget.hpp  PauseMenuWidget.hpp  SplashScreenWidget.hpp  StarSystemWidget.hpp  StatsWidget.hpp  SystemInfo.hpp
apps/galaxy/helpers/: GalaxyHelpers.hpp
apps/galaxy/renderables/: Orbit.hpp
apps/galaxy/resources/: SoundResource.hpp
apps/galaxy/scenes/: GalaxyScene.h  GalaxyScene.hpp  LoadResourcesScene.hpp  MainMenuScene.hpp  PreLoadResources.hpp  PreLoadResourcesScene.hpp  SplashScreen.hpp  SystemScene.hpp
apps/galaxy/serializer/: ConfigSerializer.hpp
apps/galaxy/systems/: BehaviorSystem.hpp  DroneStateSystem.hpp  DroneSystem.cpp  DroneSystem.hpp  EventLoggingSystem.cpp  EventLoggingSystem.hpp  GuiRenderSystem.cpp  GuiRenderSystem.hpp  GuiSystem.hpp  LambdaSystem.hpp  LifetimeSystem.cpp  LifetimeSystem.hpp  PickingSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  SoundSystem.cpp  SoundSystem.hpp  StatsSystem.cpp  StatsSystem.hpp  UpdateCurrentSystem.hpp  UpdateStarsSystem.hpp  UpdateSystem.hpp  _RenderSystem._cpp
apps/minimal_demo/: CMakeLists.txt  main.cpp
apps/sandboxes/productionSandbox/: CMakeLists.txt  FractionalAmoundFormatter.hpp  FractionalAmount.hpp  FractionalAmountFormatter.hpp  ProductionLine.hpp  Storage.hpp  Types.hpp  main.cpp
apps/sandboxes/pybind/: CMakeLists.txt  pybind_main.cpp
apps/sandboxes/resourceLoaderSandbox/: CMakeLists.txt  main.cpp
doc/: TODO.md  (+2 more)
libs/PhysFSPP/: CMakeLists.txt  PhysFSPP.cpp  PhysFSPP.hpp  PhysFSPP_Exceptions.hpp  PhysFSPP_File.cpp  PhysFSPP_File.hpp  PhysFSPP_Stream.cpp  PhysFSPP_Stream.hpp  PhysFSPP_StreamBuf.hpp  PhysFSPP_Types.hpp
libs/pgEngine/: BoundsOperations.hpp  CMakeLists.txt  ComputationalGeometry.hpp  FPSCounter.cpp  FPSCounter.hpp  Factories.cpp  Factories.h  Factories.hpp  FramedSprite.hpp  PrimitiveInterface.h  SDLApp.cpp  SDLApp.h  SDLAppConfig.h  SDLBackgoundSprite.h  SDLBounds.h  SDLErrorTrace.h  SDLFont.cpp  SDLKeyStateMap.cpp  SDLPrimitives.cpp  SDLPrimitives.h  SDLResourceCache.hpp  SDLSprite.cpp  SDLSprite.h  SDLVec.h  SpritePixelData.hpp  State.hpp  States.hpp  VecOperations.hpp  pgEngine.hpp
libs/pgEngine/core/: App.cpp  App.hpp  AppConfig.hpp  Constants.hpp  FPSCounter.cpp  FPSCounter.hpp  FrameStamp.hpp  Gui.cpp  Gui.hpp  LoadSave.hpp  State.hpp  States.hpp
libs/pgEngine/factories/: Factories.cpp  Factories.hpp
libs/pgEngine/font/: Font.cpp  Font.hpp
libs/pgEngine/generators/: MarkovNameGen.hpp
libs/pgEngine/gui/: GuiElements.hpp  ImGuiScopedWrappers.hpp
libs/pgEngine/guiElements/: guiElements.hpp
libs/pgEngine/math/: Bounds.hpp  BoundsOperations.hpp  Box.hpp  Circle.hpp  ComputationalGeometry.hpp  Intersections.hpp  Matrix.hpp  Quadtree.hpp  QuadtreeVisitor.hpp  Random.hpp  Transform.hpp  Trigonometric.hpp  Vec.hpp  VecOperations.hpp  VecOps.hpp  VecSerializer.hpp  VecUtils.hpp
libs/pgEngine/primitives/: BackgoundSprite.hpp  FramedSprite.hpp  GuiRenderable.hpp  GuiRenderer.hpp  Primitives.cpp  Primitives.hpp  Renderable.cpp  Renderable.hpp  Sprite.cpp  Sprite.hpp
libs/pgEngine/resources/: SpriteResource.hpp  TextResource.hpp
libs/pgEngine/scripting/: PythonScripter.cpp  PythonScripter.hpp
libs/pgEngine/serializer/: VecSerializer.hpp
libs/pgEngine/sprite/: BackgoundSprite.hpp  Sprite.cpp  Sprite.hpp  SpritePixelData.hpp
libs/pgFoundation/: CMakeLists.txt  Lifetime.hpp  MemStream.hpp  NamedTypeRegistrar.hpp  NamedTypeRegistry.hpp  ScopeBeginEndWrapper.hpp  VirtualFS.hpp
libs/pgGame/: CMakeLists.txt
libs/pgOrbit/: CMakeLists.txt  Constants.hpp  EulerCoordinates.hpp  FloatingPointType.hpp  OrbitCreator.cpp  OrbitCreator.hpp  OrbitalMechanics.hpp  OrbitalParameters.hpp  StarParameters.hpp
tests/: CMakeLists.txt  ResourceCacheTests.cpp  tests.cpp
tests/Bounds/: BoundsTest.cpp  BoundsTests.cpp  BoxTests.cpp
tests/Matrix/: MatrixTests.cpp
tests/Orbital/: OrbitalTests.cpp
tests/Quadtree/: QuadTreeTests.cpp
tests/ResourceCache/: ResourceCacheTests.cpp
tests/ResourceManager/: ResourceManagerTests.cpp
tests/Vec/: VecMathTests.cpp  VecSerializerTests.cpp  VecTests.cpp
tools/: CMakeLists.txt
tools/collision_shape_maker/: CMakeLists.txt  main.cpp
(+105 files in other folders)
